Make charset-detection code work with just a BOM (no @charset rule) in the sheet.  Bug 218915, r=smontagu, sr=dbaron